5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1644_1053.log
== TEST (2019-04-09 16:59:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o nome do seu patrono? ")
if (patrono==cervo):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono, "nao eh patrono de Harry Potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (patrono==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:59:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o nome do seu patrono? ")
if (patrono=cervo):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono, "nao eh patrono de Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if (patrono=cervo):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:00:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o nome do seu patrono? ")
if (patrono=="cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono, "nao eh patrono de Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:01:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o nome do seu patrono? ")
if (patrono=="cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + nao eh patrono de Harry Potter
print(mensagem)
-- ERROR:
File "XXXX", line 9
    mensagem = patrono + nao eh patrono de Harry Potter
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:01:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o nome do seu patrono? ")
if (patrono=="cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono " nao eh patrono de Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 9
    mensagem = patrono " nao eh patrono de Harry Potter"
                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:01:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o nome do seu patrono? ")
if (patrono=="cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono, " nao eh patrono de Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:02:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o nome do seu patrono? ")
if (patrono=="cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:03:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o nome do seu patrono? ")
if (patrono=="cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.172958
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:03:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o nome do seu patrono? ")
if (patrono=="cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:03:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o nome do seu patrono? ")
if (patrono=="cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:03:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o nome do seu patrono? ")
if (patrono=="cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.154802
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:04:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o nome do seu patrono? ")
if (patrono=="cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:05:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o nome do seu patrono? ")
if (patrono=="cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem.lower())
-- EXECUTION TIME:
0.18637
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:05:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o nome do seu patrono? ")
if (patrono=="cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono de harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:05:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o nome do seu patrono? ")
if (patrono=="cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem.lower())
-- EXECUTION TIME:
0.180844
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:06:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o nome do seu patrono? ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono de harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:06:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o nome do seu patrono? ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem.lower())
-- EXECUTION TIME:
0.281873
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:07:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono? ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono de harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:07:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono? ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem.lower())
-- EXECUTION TIME:
0.12597
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:07:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono? ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:07:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono? ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.277851
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:08:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono? ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.130125
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:09:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono? ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.141113
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:11:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono? ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.107684
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:11:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono?")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.125655
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:11:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono? ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.148195
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:11:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono? ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:12:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono? ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.130535
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:19:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono? ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + "nao eh patrono de Harry Potter"
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono de harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:19:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono? ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"

else:
	mensagem = patrono + "nao eh patrono de Harry Potter"
print(mensagem.lower())
-- EXECUTION TIME:
0.19266
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono de harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:20:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono? ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + "nao eh patrono de Harry Potter"
print(mensagem.lower())
-- EXECUTION TIME:
0.178985
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono de harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:21:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono? ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + "nao eh patrono do Harry Potter"
print(mensagem.lower())
-- EXECUTION TIME:
0.170922
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:21:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono? ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + "nao eh patrono do Harry Potter"
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:39:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono? ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + "nao eh patrono do Harry Potter"
print(mensagem.lower())
-- EXECUTION TIME:
0.145909
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:39:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono? ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + "nao eh patrono do Harry Potter"
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:40:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono? ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + " nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:40:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do seu patrono? ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + " nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.172081
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
